added functionality for claude and gemini

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ generated_hypotheses/
 function_calling_results/
 hypothesis_results/*
 AG4/*
+examples/
+robin_output/
 
  # Development Environment
 .env
